updated exercise controller
