# controllers/exerciseList-controller.js
@@ -22,22 +22,19 @@ var upload = multer({
         }
         callback(null, true);
     }
-}).single('uploadfile');
+}).single('uploadFile');
 
-const postExerciseList = async (req, res, next) => {
-    
-    const excersize = req.body;
-    excersize.userId=req.user._id
+async function matchYoutubeUrl(url) {
+    var p = /^(?:https?:\/\/)?(?:m\.|www\.)?(?:youtu\.be\/|youtube\.com\/(?:embed\/|v\/|watch\?v=|watch\?.+&v=))((\w|-){11})(?:\S+)?$/;
+    if(url.match(p)){
+        url.match(p)[1];
+        return true;
+    }
+    return false;
+}
+const postExcelExercise = async (req, res, next) => {
     try {
-        const details = await ExerciseList.findOne({userId:req.user._id})
-        if(details){
-            return res.status(400).send({error:true , errorMessage:"exerciseList is already added with unique userID. Just update it!!!!"})
-        }
-        if(req.body.exerciseType){
-            const inserted = await ExerciseList.insertMany(excersize);
-        res.json({error: false, message: 'exerciseList inserted successfully', inserted});
-        } else {
-            var exceltojson;
+        var exceltojson;
         upload(req,res,function(err){
         if(err){
              res.json({error_code:1,err_desc:err});
@@ -59,23 +56,47 @@ const postExerciseList = async (req, res, next) => {
                 lowerCaseHeaders:false
             },async function(err,result){
                 let dataFromExcel=[];
+                let verifiedYoutubeUrl=[];
                 for(let excelData of result){
                     dataFromExcel.push(excelData);
+                    verifiedYoutubeUrlBoolean =await matchYoutubeUrl(excelData.youTubeURL);
+                    verifiedYoutubeUrl.push(verifiedYoutubeUrlBoolean)
                }
-                  console.log(dataFromExcel);
+               let checker = a => a.every(v => v === true);
+               let validateUtl = checker(verifiedYoutubeUrl);
                 if(err) {
                     return res.json({error_code:1,err_desc:err, data: null});
                 } 
-                const savedResult = await ExerciseList.insertMany(dataFromExcel);
-                res.json({error_code:0,err_desc:null, data: savedResult});
-                console.log(savedResult);
+                if(validateUtl === true){
+                    const savedResult = await ExerciseList.insertMany(dataFromExcel);
+                    res.json({error_code:0,err_desc:null, data: savedResult});
+                }else {
+                    res.json({error:true,message:"Invalid Youtube Url"})
+                } 
             });
         } catch (e){
             next(e)
         }
     })
+    } catch (err) {
+        next(err);
+    }
+};
+
+
+const postExerciseList = async (req, res, next) => {
+    
+    const excersize = req.body;
+    excersize.userId=req.user._id
+   let verifiedYoutubeUrl =await matchYoutubeUrl(excersize.youTubeURL)
+    try {
+        if(verifiedYoutubeUrl === true){
+            const inserted = await ExerciseList.insertMany(excersize);
+            res.json({error: false, message: 'exerciseList inserted successfully', inserted});
+        }else {
+            res.json({error:true,message:"Invalid Youtube Url"})
         }
-        
+       
     } catch (err) {
         next(err);
     }
@@ -83,15 +104,15 @@ const postExerciseList = async (req, res, next) => {
 
 
 const putExerciseList = async (req, res, next) => {
-    const {exerciseType, exerciseName, youTubeURL} = req.body;
+    const exercise = req.body;
+   let verifiedYoutubeUrl =await matchYoutubeUrl(excersize.youTubeURL)
     try {
-        const inserted = await ExerciseList.findByIdAndUpdate(req.params.id,{
-                exerciseType,
-                exerciseName,
-                youTubeURL
-            },{new:true});
-
+        if(verifiedYoutubeUrl === true){
+        const inserted = await ExerciseList.findByIdAndUpdate(req.params.id,exercise,{new:true});
         res.json({error: false, message: 'exerciseList is  updated successfully', inserted});
+        }else{
+            res.json({error:true,message:"Invalid Youtube Url"})
+        }
     } catch (err) {
         next(err);
     }
@@ -120,5 +141,6 @@ module.exports = {
     postExerciseList,
     getExerciseList,
     putExerciseList,
-    deleteExerciseList
+    deleteExerciseList,
+    postExcelExercise
 }
